Corrected navbar visibility instead of display tag

--- a/planned-planthood/assets/css/style.css
+++ b/planned-planthood/assets/css/style.css
@@ -32,7 +32,7 @@ img {
 }
 
 .navigation {
-  display: none;
+  visibility: hidden;
 }
 
 .wrapper {
@@ -440,6 +440,7 @@ footer a:hover {
   }
 
   .navigation {
+    visibility: visible;
     display: flex;
     flex-direction: column;
   }
